[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/present1.png" type="Texture" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/coin.png" type="Texture" id=3]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/OptionsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/bomb.png" type="Texture" id=6]
[ext_resource path="res://scenes/Life.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/Hardpixel.OTF" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 38
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Main" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 30.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Main"]
margin_right = 1220.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageLevelContainer" type="VBoxContainer" parent="Main/HBox"]
margin_right = 220.0
margin_bottom = 160.0
alignment = 1

[node name="StageLabel" type="Label" parent="Main/HBox/StageLevelContainer"]
margin_top = 32.0
margin_right = 220.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Stage: 1 / 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="Main/HBox/StageLevelContainer"]
margin_top = 82.0
margin_right = 220.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Level: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesContainer" type="HBoxContainer" parent="Main/HBox"]
margin_left = 224.0
margin_right = 1008.0
margin_bottom = 160.0
size_flags_horizontal = 3
alignment = 1

[node name="Life" parent="Main/HBox/LivesContainer" instance=ExtResource( 7 )]
margin_left = 298.0
margin_right = 358.0
margin_bottom = 160.0

[node name="Life2" parent="Main/HBox/LivesContainer" instance=ExtResource( 7 )]
margin_left = 362.0
margin_right = 422.0
margin_bottom = 160.0

[node name="Life3" parent="Main/HBox/LivesContainer" instance=ExtResource( 7 )]
margin_left = 426.0
margin_right = 486.0
margin_bottom = 160.0

[node name="CoinBombContainer" type="VBoxContainer" parent="Main/HBox"]
margin_left = 1012.0
margin_right = 1220.0
margin_bottom = 160.0
alignment = 1

[node name="CoinContainer" type="HBoxContainer" parent="Main/HBox/CoinBombContainer"]
margin_right = 208.0
margin_bottom = 46.0
custom_constants/separation = 5
alignment = 2

[node name="CoinImage" type="TextureRect" parent="Main/HBox/CoinBombContainer/CoinContainer"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 43.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="CoinsLabel" type="Label" parent="Main/HBox/CoinBombContainer/CoinContainer"]
margin_left = 45.0
margin_right = 208.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = ": 0 (+ 0)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombContainer" type="HBoxContainer" parent="Main/HBox/CoinBombContainer"]
margin_top = 50.0
margin_right = 208.0
margin_bottom = 110.0
custom_constants/separation = 5
alignment = 2

[node name="BombImage" type="TextureRect" parent="Main/HBox/CoinBombContainer/BombContainer"]
margin_left = 120.0
margin_right = 180.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="BombLabel" type="Label" parent="Main/HBox/CoinBombContainer/BombContainer"]
margin_left = 185.0
margin_top = 7.0
margin_right = 208.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiftContainer" type="HBoxContainer" parent="Main/HBox/CoinBombContainer"]
margin_top = 114.0
margin_right = 208.0
margin_bottom = 160.0
custom_constants/separation = 5
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiftImage" type="TextureRect" parent="Main/HBox/CoinBombContainer/GiftContainer"]
margin_left = 140.0
margin_top = 3.0
margin_right = 180.0
margin_bottom = 43.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="GiftLabel" type="Label" parent="Main/HBox/CoinBombContainer/GiftContainer"]
margin_left = 185.0
margin_right = 208.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -620.0
margin_top = -43.5
margin_right = 620.0
margin_bottom = 43.5
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PauseMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="timeout" from="GoTimer" to="." method="_on_GoTimer_timeout"]
